--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Historical fiction'
 - !lcc 'PR'
 - !lcsh 'Great Britain -- History -- James II, 1685-1688 -- Fiction'
+- GITenberg
 title: 'The Courtship of Morrice Buckler: A Romance'
 url: http://www.gutenberg.org/ebooks/38665
